<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/navigation_bar" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/view_margin_left_right_10">

            <EditText
                android:id="@+id/tvUsername"
                style="@style/EditviewDefaultStyle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/editview_height_default"
                android:layout_marginTop="@dimen/view_margin_left_right_10"
                android:layout_marginLeft="@dimen/view_margin_left_right_20"
                android:layout_marginRight="@dimen/view_margin_left_right_20"
                android:background="@drawable/edt_username_password"
                android:hint="@string/login_hint_username"
                android:inputType="text" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/view_margin_left_right_20"
                android:layout_marginRight="@dimen/view_margin_left_right_20"
                android:layout_marginTop="@dimen/view_margin_top_buttom_small"
                android:text="@string/regist_username_details"
                android:textColor="@android:color/darker_gray"
                android:textSize="@dimen/font_size_small" />


            <EditText
                android:id="@+id/tvPassword"
                style="@style/EditviewDefaultStyle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/editview_height_default"
                android:layout_marginLeft="@dimen/view_margin_left_right_20"
                android:layout_marginRight="@dimen/view_margin_left_right_20"
                android:layout_marginTop="@dimen/view_margin_top_buttom"
                android:background="@drawable/edt_username_password"
                android:hint="@string/login_hint_password"
                android:inputType="textPassword" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/view_margin_left_right_20"
                android:layout_marginRight="@dimen/view_margin_left_right_20"
                android:layout_marginTop="@dimen/view_margin_top_buttom_small"
                android:text="@string/regist_password_details"
                android:textColor="@android:color/darker_gray"
                android:textSize="@dimen/font_size_small" />

            <EditText
                android:id="@+id/tvRealname"
                style="@style/EditviewDefaultStyle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/editview_height_default"
                android:layout_marginLeft="@dimen/view_margin_left_right_20"
                android:layout_marginRight="@dimen/view_margin_left_right_20"
                android:layout_marginTop="@dimen/view_margin_top_buttom"
                android:background="@drawable/edt_username_password"
                android:hint="@string/regist_realname"
                android:inputType="text" />


            <!-- 性别 -->
            <RadioGroup
                android:id="@+id/rbSex"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="@dimen/view_margin_left_right_20"
                android:layout_marginRight="@dimen/view_margin_left_right_20"
                android:layout_marginTop="@dimen/view_margin_top_buttom"
                android:gravity="center"
                android:orientation="horizontal">

                <RadioButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/view_margin_left_right_20"
                    android:layout_weight="1"
                    android:text="@string/sex_man" />

                <RadioButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/view_margin_left_right_20"
                    android:layout_weight="1"
                    android:text="@string/sex_women" />

            </RadioGroup>

            <!-- 生日 -->

            <TextView
                android:id="@+id/tvBirthday"
                style="@style/TextviewContextStyle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/editview_height_default"
                android:layout_marginLeft="@dimen/view_margin_left_right_20"
                android:layout_marginRight="@dimen/view_margin_left_right_20"
                android:layout_marginTop="@dimen/view_margin_top_buttom"
                android:background="@drawable/edt_username_password"
                android:gravity="center_vertical"
                android:hint="@string/birthday"
                android:paddingLeft="@dimen/view_margin_left_right_10" />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/editview_height_default"
                android:layout_marginLeft="@dimen/view_margin_left_right_20"
                android:layout_marginRight="@dimen/view_margin_left_right_20"
                android:layout_marginTop="@dimen/view_margin_top_buttom"
                android:background="@drawable/edt_username_password">

                <EditText
                    android:id="@+id/tvPhoneNumber"
                    style="@style/EditviewDefaultStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:hint="@string/phone_number"
                    android:inputType="text" />

                <Button
                    android:id="@+id/btnSendValidationCode"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginBottom="@dimen/view_margin_top_buttom_small"
                    android:layout_marginRight="@dimen/view_margin_top_buttom"
                    android:layout_marginTop="@dimen/view_margin_top_buttom_small"
                    android:background="@color/app_theme_color"
                    android:text="@string/send_validation_code"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/font_size_small" />

            </RelativeLayout>

            <EditText
                android:id="@+id/tvValidationCode"
                style="@style/EditviewDefaultStyle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/editview_height_default"
                android:layout_marginLeft="@dimen/view_margin_left_right_20"
                android:layout_marginRight="@dimen/view_margin_left_right_20"
                android:layout_marginTop="@dimen/view_margin_top_buttom"
                android:background="@drawable/edt_username_password"
                android:hint="@string/validation_code"
                android:inputType="text" />

            <Button
                android:id="@+id/btnRegist"
                style="@style/ButtonDefaultStyle"
                android:layout_width="match_parent"
                android:layout_marginLeft="@dimen/view_margin_left_right_20"
                android:layout_marginRight="@dimen/view_margin_left_right_20"
                android:layout_marginTop="@dimen/view_margin_top_buttom_superlarge"
                android:text="@string/regist" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/view_margin_left_right_20"
                android:layout_marginRight="@dimen/view_margin_left_right_20"
                android:layout_marginTop="@dimen/view_margin_top_buttom_superlarge"
                android:text="@string/regist_details"
                android:textColor="@android:color/darker_gray"
                android:textSize="@dimen/font_size_small" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>