<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:orientation="vertical">

    <Button
        android:id="@+id/btnPublicLovetime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/TextviewContextStyle"
        android:background="@drawable/btn_round_white"
        android:text="@string/public_pop_dialog_menu_lovetime" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/view_margin_top_buttom_small"
        android:layout_marginLeft="@dimen/view_margin_left_right_10"
        android:layout_marginRight="@dimen/view_margin_left_right_10"
        android:background="#ddd" />

    <Button
        android:id="@+id/btnPublicLvxingji"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_round_white"
        style="@style/TextviewContextStyle"
        android:text="@string/public_pop_dialog_menu_itinerary" />

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/TextviewContextStyle"
        android:layout_marginTop="@dimen/view_margin_left_right_10"
        android:background="@drawable/btn_round_white"
        android:text="@string/public_pop_dialog_cancel" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/view_margin_left_right_10" />
</LinearLayout>