<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ebm="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activity_background_color"
    tools:context=".activity.WelcomeActivity">


    <LinearLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v4.view.ViewPager
            android:id="@+id/mainViewPage"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

        </android.support.v4.view.ViewPager>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dip"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/toolbar_height"
            android:background="@color/toolbar_bgcolor"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/lyHome"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/icon_small_size"
                    android:layout_height="@dimen/icon_small_size"
                    android:src="@mipmap/icon_toolbar_home" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/toolbar_title_home"
                    android:textColor="@color/app_theme_color"
                    android:textSize="@dimen/font_size_small" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/lyFind"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/icon_small_size"
                    android:layout_height="@dimen/icon_small_size"
                    android:src="@mipmap/icon_toolbar_find_n" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/toolbar_title_find"
                    android:textColor="@color/toolbar_font_color"
                    android:textSize="@dimen/font_size_small" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/lyMe"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/icon_small_size"
                    android:layout_height="@dimen/icon_small_size"
                    android:src="@mipmap/icon_toolbar_love_n" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/toolbar_title_me"
                    android:textColor="@color/toolbar_font_color"
                    android:textSize="@dimen/font_size_small" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>


    <!-- android:visibility="gone" 弃用 -->
    <wjy.morelove.widget.expandablebuttonmenu.ExpandableMenuOverlay
        android:id="@+id/btnPublic"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:padding="@dimen/view_margin_top_buttom_small"
        android:src="@mipmap/ebm_public"
        android:visibility="gone"
        ebm:bottomPad="0.0"
        ebm:closeButtonSrc="@mipmap/ebm_public"
        ebm:distanceX="0.25"
        ebm:distanceY="0.16"
        ebm:leftButtonSrc="@mipmap/icon_ebm_lovetime"
        ebm:leftButtonText="@string/ebm_left_buttom_title"
        ebm:mainButtonSize="0.18"
        ebm:midButtonSrc="@mipmap/icon_ebm_album"
        ebm:midButtonText="@string/ebm_mid_buttom_title"
        ebm:otherButtonSize="0.16"
        ebm:rightButtonSrc="@mipmap/icon_ebm_opentime"
        ebm:rightButtonText="@string/ebm_right_buttom_title" />


</RelativeLayout>