<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <wjy.morelove.widget.GifView
        android:id="@+id/gifImage"
        android:scaleType="fitXY"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <include layout="@layout/navigation_bar"/>


    <LinearLayout
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.4"
        android:padding="@dimen/view_margin_left_right_10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_goneMarginLeft="@dimen/view_margin_left_right_20"
        app:layout_goneMarginRight="@dimen/view_margin_left_right_20">

        <EditText
            android:id="@+id/etUsername"
            style="@style/EditviewDefaultStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/editview_height_default"
            android:layout_marginLeft="@dimen/view_margin_left_right_20"
            android:layout_marginRight="@dimen/view_margin_left_right_20"
            android:background="@drawable/edt_username_password"
            android:hint="@string/login_hint_username"
            android:inputType="text" />

        <EditText
            android:id="@+id/etPassword"
            style="@style/EditviewDefaultStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/editview_height_default"
            android:layout_marginLeft="@dimen/view_margin_left_right_20"
            android:layout_marginRight="@dimen/view_margin_left_right_20"
            android:layout_marginTop="@dimen/view_margin_top_buttom_small"
            android:background="@drawable/edt_username_password"
            android:hint="@string/login_hint_password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            style="@style/ButtonDefaultStyle"
            android:layout_marginTop="@dimen/view_margin_top_buttom_superlarge"
            android:layout_marginLeft="@dimen/view_margin_left_right_20"
            android:layout_marginRight="@dimen/view_margin_left_right_20"
            android:text="@string/login"/>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>