<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/navigation_bar" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:padding="@dimen/view_margin_left_right_10">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/view_margin_left_right_10">

            <EditText
                android:id="@+id/etContext"
                style="@style/item_input_edittext"
                android:gravity="top"
                android:hint="@string/public_lovetime_hint_message"
                android:imeOptions="actionNext"
                android:inputType="textMultiLine"
                android:lines="5"
                android:maxLines="15" />
        </LinearLayout>

    </LinearLayout>


    <RadioGroup
        android:id="@+id/rbPublicModel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/view_margin_left_right_20"
        android:background="@android:color/white"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="@dimen/view_margin_top_buttom_small">

        <RadioButton
            android:id="@+id/rbPrivate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/public_lovetime_sm" />

        <RadioButton
            android:id="@+id/rbPublic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/view_margin_left_right_10"
            android:text="@string/public_lovetime_gk" />

    </RadioGroup>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:padding="@dimen/view_margin_top_buttom"
        android:layout_marginTop="@dimen/view_margin_left_right_20"
        android:gravity="left"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="图片总大小："
            android:singleLine="true"
            android:textColor="#ff080808"
            android:textSize="@dimen/font_size_context" />

        <TextView
            android:id="@+id/tvImageSizeCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/view_margin_left_right_20"
            android:background="@null"
            android:hint="297091"
            android:singleLine="true"
            android:textColor="#ff080808"
            android:textSize="@dimen/font_size_small"
            android:visibility="visible" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:layout_marginLeft="@dimen/view_margin_left_right_10"
        android:layout_marginRight="@dimen/view_margin_left_right_10"
        android:background="@color/activity_background_color"/>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/rySelectImages"
        android:background="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </android.support.v7.widget.RecyclerView>

</LinearLayout>